package src.menu;

public interface MenuCommand {
    void execute();
    String getDescription();
} 