package src.notifications;

public enum NotificationType {
    EMAIL,
    SMS,
    BOTH,
    NONE
} 